crates/pandalang/src/snapshots/pandalang__eval__tests__evals@add_one.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/app/add_one.panda
---
Int(
    Int {
        n: 4,
    },
)
