crates/pandalang/src/snapshots/pandalang__eval__tests__evals@id.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/app/id.panda
---
Int(
    Int {
        n: 3,
    },
)
