crates/pandalang/src/snapshots/pandalang__eval__tests__evals@prec1.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/bin_op/prec1.panda
---
Int(
    Int {
        n: 3,
    },
)
