crates/pandalang/src/snapshots/pandalang__eval__tests__evals@prime.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/var/prime.panda
---
Int(
    Int {
        n: 2,
    },
)
