crates/pandalang/src/snapshots/pandalang__eval__tests__evals@var.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/var/var.panda
---
Int(
    Int {
        n: 0,
    },
)
